Fix video link and improve HTML formatting
Updated video link and corrected HTML structure.

--- a/myLove.html
+++ b/myLove.html
@@ -24,7 +24,7 @@
     
     <p>Because life’s better when we're together! </p>
   
-    <a class="button" href="images/video2.mp4" target="_blank">Watch the full message 💌</a>
+    <a class="button" href="https://youtu.be/it2ASlfz6XQ?si=5JlZfEJZHlnPyHLw" target="_blank">Watch the full message 💌</a>
 
     <div class="card">
         <div class="count-heart">💗</div>
@@ -41,3 +41,4 @@
     <script src="javascript.js"></script>
 </body>
 </html>
+
